--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,11 @@
   grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr));
   gap: 5.5rem;
   width: 85%;
-  margin: 10rem auto;
+  margin: 0 auto;
+}
+
+.AppLogo{
+  width: 60rem;
+  margin-top: 8rem;
+  text-align: center;
 }
